# rust-tutorial

./: .gitignore  Cargo.toml  README.md
adder/: Cargo.toml
adder/src/: lib.rs  main.rs
guessing_game/: Cargo.toml
guessing_game/src/day001/: main.rs  printplacehold.rs
guessing_game/src/day002/: compoundtype.rs  controlflow.rs  floatpoint.rs  functions.rs  variables.rs
guessing_game/src/day003/: ownership.rs
guessing_game/src/day004/: borrow.rs  danglingpointer.rs  mutablereference.rs  slicetype.rs
guessing_game/src/day005/: enum.rs  matchpattern.rs  modules.rs  struct_example.rs
guessing_game/src/day006/: hashmap.rs  vector.rs
mio_demo/: Cargo.toml
mio_demo/src/: main.rs
src/: main.rs
src/borrow/: borrow.rs  mod.rs
src/collection_demo/: String.rs  hashmap.rs  mod.rs  string.rs  vector.rs
src/concurrency/: mod.rs  sendsync.rs
src/error/: error.rs
src/function/: closure.rs  constfn.rs  functions.rs  higherorderfunction.rs  higherrankedlifetime.rs  iterator.rs  lifetime.rs  mod.rs
src/guess_number/: guess.rs  mod.rs
src/lifetime/: lifetime.rs  mod.rs  smartptr_ownership.rs
src/mio/: mio_demo.rs  mod.rs
src/oop/: color.rs  drop_order.rs  mod.rs
src/ownership/: concurrency.rs  mod.rs  ownership.rs
src/struct_and_enum/: enum_demo.rs  mod.rs  struct_demo.rs  struct_example.rs
src/trait_demo/: conditionallyimpltrait.rs  generic.rs  largestfunction.rs  lifetime.rs  mod.rs  structrefs.rs  trait_demo.rs  trait_two.rs
src/variable/: compound_type.rs  control_flow.rs  float.rs  match_pattern.rs  mod.rs  scala_type.rs
(+5 files in other folders)
